# anon_shop

./: .gitignore  Cargo.toml  n  n.pub
admin_panel/: Cargo.toml
admin_panel/src/: main.rs
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql
backend/src/: api.rs  database.rs  lib.rs  main.rs  tor.rs
backend/src/models/: order.rs  product.rs
backend/src/repositories/: order.rs  product.rs
backend/src/routes/: mod.rs  products.rs
frontend/: Cargo.toml  Trunk.toml  index.html  styles.css
frontend/src/: app.rs  lib.rs  main.rs
payments/: Cargo.toml
