[workspace]
members = [
    "backend",
    "payments",
    "admin_panel",
    "frontend"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
# Общие утилиты
anyhow = "1.0.81"
thiserror = "1.0.58"
log = "0.4.21"
env_logger = "0.11.3"
hex = "0.4.3"
futures = "0.3.30"

# Сериализация
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# БД и ORM
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }

# Веб
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }

# Tor интеграция
arti-client = { version = "0.31.0", default-features = false, features = [
    "tokio",
    "static",
    "pt-client"  # Исправлено: pt-client вместо client
] }
tor-rtcompat = { version = "0.31.0", features = ["tokio"] }
tor-config = "0.31.0"

# Крипто
aes-gcm = "0.10.3"
ring = "0.17.8"
monero-rpc = "0.4.0"
bitcoin = { version = "0.32.6", features = ["use-serde"] }

# Время/UUID
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# Фронтенд
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.40"
gloo-net = "0.6.0"
web-sys = { version = "0.3", features = ["console"] }

[patch.crates-io]
libsqlite3-sys = { version = "0.30.1" }  # Форсируем новую версию