[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies

axum = { workspace = true }
tokio = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }

# Используем PostgreSQL вместо SQLite для избежания конфликтов
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-native-tls", "migrate"] }

# Tor без sqlite
arti-client = { workspace = true }

# Добавляем PostgreSQL драйвер
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }

# Local dependencies
payments = { path = "../payments" }

