[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies

# Workspace
tokio = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tokio-postgres = { workspace = true }
arti-client = { workspace = true }


axum = { workspace = true }


chrono = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }


# Local dependencies
payments = { path = "../payments" }

