[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[lib]
name = "frontend_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.6.0"