[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
# Заменяем на рабочую версию monero
monero-rpc.workspace = true

# Bitcoin - используем последнюю стабильную
bitcoin.workspace = true

# Общие зависимости
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
hex.workspace = true