[package]
name = "payments"  # Должно быть "payments", а не "admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
# Локальная зависимость (без workspace)
backend = { path = "../backend" }

# Workspace-зависимости
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }