[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[dependencies]
backend = { path = "../backend" }
sqlx = { workspace = true, features = ["postgres"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
bitcoin = { workspace = true, features = ["std"] }  # Явно указываем features
monero-rpc = { workspace = true }

[patch.crates-io]
libsqlite3-sys = { version = "0.30.1" }